<resources>
    <string name="app_name">EasyCounter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save counter</string>
    <string name="action_reset">Reset counter</string>

    <!-- Alert Dialog Strings -->
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="message_reset_value">You want to reset the value?</string>
    <string name="message_reset_counter">You want to reset the counter?</string>
    <string name="message_delete_item_counter">Delete this counter?</string>

    <!-- Drawer Strings -->
    <string name="create_counter">Create new counter</string>
    <string name="create_multipul_counter">Create multipul counter</string>
    <string name="my_counters">My counters</string>
    <string name="multipul_counters">Multipul counters</string>
    <string name="settings">Settings</string>

    <!-- Settings Strings -->
    <string name="sound">Sound</string>
    <string name="sound_info">Play sound when you press buttons</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_info">Use vibration when pressing buttons</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="reset_settings">Reset settings</string>
    <string name="reset_info">Reset counter value</string>
    <string name="time">Time</string>
    <string name="time_info">Show the last count change time</string>
    <string name="screen">Screen</string>
    <string name="screen_info">Do not turn off the screen during counting</string>
    <string name="hardware_buttons">Hardware buttons</string>
    <string name="hardware_buttons_info">Use hardware volume buttons for counting</string>

    <!-- Dialog New Counter Strings -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="counter_type">Counter type</string>
    <string name="start_counter">Start counter (value)</string>
    <string name="step">Step</string>
    <string name="next_button">Next</string>
    <string name="only_plus">Only +</string>
    <string name="only_minus">Only -</string>
    <string name="title_new_counter">Create new counter</string>
    <string name="last_time_change">Last time change:</string>

    <!-- Others -->
    <string name="empty_list">Counters not found</string>

    <!-- Arrays Strings -->
    <string-array name="step">
        <item>Step</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>

</resources>
