<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_counter"
            android:icon="@drawable/ic_add"
            android:title="@string/create_counter" />
        <item
            android:id="@+id/nav_create_multipul_counter"
            android:icon="@drawable/ic_multipul_add"
            android:title="@string/create_multipul_counter" />
        <item
            android:id="@+id/nav_my_counter"
            android:icon="@drawable/ic_my_counter"
            android:title="@string/my_counters" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
